Adding a button to call update() function that check for card reader software and configuration updates

--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -15,6 +15,11 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content" />
     <Button
+        android:id="@+id/updateDevice"
+        android:text="Check for update"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" />
+    <Button
         android:id="@+id/payWithPinAuthorized"
         android:text="Pay $110 With Pin Authorized"
         android:layout_width="fill_parent"
